# PROJECT

./: .gitignore  README.md  link_to_presentation.txt  link_to_report.txt  pyproject.toml
analysis/: ASF_group_comparison.csv  eTIV_group_comparison.csv  nWBV_group_comparison.csv
data/: cleaned_dataset.csv
src/: data_analysis.py  data_cleaning.py  data_visualization.py  main.py
tests/: test_data_analysis.py  test_data_cleaning.py  test_main.py
