[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-analysis-suite"
version = "0.1.0"
description = "A suite of tools for data analysis and visualization"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "numpy>=1.21.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyw?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.hatch.build.targets.wheel]
packages = ["src"]
